--- a/Cargo.toml
+++ b/Cargo.toml
@@ -30,3 +30,5 @@ serde_json = "^1.0.8"
 uuid = { version="0.8.1", features = ["v4"] }
 hyper = "0.13.1"
 hyper-router = "^0.5"
+http = "0.2.0"
+tokio = {version = "0.2.6",features = ["full"] }
