--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,21 +14,5 @@ edition = "2018"
 travis-ci = { repository = "voyages-sncf-technologies/soda-test-service", branch = "master" }
 
 [dependencies]
-actix = "0.9.0"
-actix-web = "2.0.0"
-actix-web-httpauth = "^0.3.2"
-env_logger = "^0.7.1"
-log = "^0.4.3"
-clap = "^2.32.0"
-futures = "0.3.1"
-failure = "^0.1.3"
-url = "2.1.0"
-bytes = "0.5.3"
-serde = "^1.0.80"
-serde_derive = "^1.0.71"
-serde_json = "^1.0.8"
-uuid = { version="0.8.1", features = ["v4"] }
+futures = { version = "0.3", features = ["compat"] }
 hyper = "0.13.1"
-hyper-router = "^0.5"
-http = "0.2.0"
-tokio = {version = "0.2.6",features = ["full"] }
